minor1/moved_Base_to_package_y.txt
src/y/Child.java:5: error: constructor Base in class Base cannot be applied to given types;
  Child(int a, int b, int c, int d) {
                                    ^
  required: int
  found:    no arguments
  reason: actual and formal argument lists differ in length
src/y/Child.java:7: error: cannot find symbol
    Base(a);
    ^
  symbol:   method Base(int)
  location: class Child
src/y/Child.java:13: error: a has private access in Base
    System.out.println("ChildState: a= " +a+
                                          ^
src/y/Main.java:6: error: cannot find symbol
    childRef.display();
            ^
  symbol:   method display()
  location: variable childRef of type Base
4 errors
